--- a/css/style.scss
+++ b/css/style.scss
@@ -340,8 +340,6 @@ body {
 				.page_title {
 					h2 {
 						@include fontsize(24);
-						&:before {
-						}
 					}
 				}
 			}
@@ -403,7 +401,7 @@ body {
 									position: absolute;
 									bottom: 0em;
 									left: 0;
-									width: fill-available;
+									width: stretch;
 									height: 1px;
 									content: '';
 									border-radius: 3px;
@@ -593,6 +591,13 @@ body {
 					}
 				}
 			}//.research_now, .research_arc, .publication
+			.p_g_f {
+				margin-bottom: 150px;
+				h2 {
+					font-weight: 100;
+    			padding-bottom: 10px;
+				}
+			}//.p_g_f
 		}//article
 	}//main
 
@@ -606,8 +611,8 @@ body {
 				.contacts {
 					width: 35%;
 					height: 150px;
-					border-top: solid 1px $accent;
-					border-bottom: solid 1px $accent;
+					border-top: solid 1px $base;
+					border-bottom: solid 1px $base;
 					background-color: $background;
 					margin: 4px 0;
 					padding-top: 100px;
@@ -713,14 +718,6 @@ body {
 						height: 150px;
 						text-align: center;
 						padding-right: 0;
-						a {
-							i {
-								&:hover {
-								}
-							}
-						}
-						&:before {
-						}
 						.contacts_sp {
 							display: block;
 							margin: 60px 0;
@@ -856,6 +853,26 @@ body {
 		width: 90%;
 	}
 }
+
+.p_g_f {
+	.btn {
+		@media screen and (max-width: 1350px) {
+			.arrow2 {
+				padding-right: 30px;
+				padding-left: 30px;
+			}
+		}
+		@media screen and (max-width: 1043px) {
+			.arrow2 {
+				padding-right: 0px;
+				padding-left: 0px;
+				&::before, &::after {
+					display: none;
+				}
+			}
+		}
+	}
+}//.p_g_f
 
 /* Animation
     –––––––––––––––––––––––––––––––––––––––––––––––––– */
